# MWERalign

./: CMakeLists.txt  README.md  cbuild.sh
src/: CMakeLists.txt  Evaluator.cc  Evaluator.hh  Evaluator_unsegmentedWER.cc  Evaluator_unsegmentedWER.hh  IOfile.cc  IOfile.hh  SimpleText2.cc  SimpleText2.hh  gzstream.cc  mwerAlign.cc  mwerAlign.hh
test/: CMakeLists.txt  mwerAlign-test.cc  mwerAlign.cc
